# Photon

./: .gitignore  Makefile  limine.conf
docs/: design.md  roadmap.md
kernel/: Cargo.toml  Makefile  build.rs  linker-x86_64.ld
kernel/src/: logger.rs  main.rs
kernel/src/arch/x86_64/: gdt.rs  io.rs  mod.rs
kernel/src/arch/x86_64/interrupts/: exceptions.rs  handler.rs  idt.rs  mod.rs
kernel/src/drivers/: uart_16650.rs
kernel/src/memory/: addr.rs  bootstrap.rs  frame.rs  frame_allocator.rs  mem_map.rs  mod.rs
