[package]
name = "kernel"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "2.9.4"
limine = "0.5.0"
log = "0.4.28"
spin = { version = "0.10.0", default-features = false, features = ["once", "spin_mutex"] }
